--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,8 @@
 
     <div class="row">
         <div class="center col-sm-12">
-            <img src="assets/img/burger.png" alt="Eat-Da-Burger App">
-            <h1>Eat-Da-Burger App</h1>
+            <img src="assets/img/burger.svg" alt="Eat-Da-Burger App">
+            {{!-- <h1>Eat-Da-Burger App</h1> --}}
             <p></p>
         </div>
     </div>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="col-sm-6">
-
+            <br>
             <h2>Burgers That Have Been Eaten!</h2>
 
             {{#each burgers}} {{#if this.devoured}}
@@ -45,11 +45,13 @@
         </div>
 
     </div>
+    
     <!-- end .row -->
 
     <div class="row">
         <div class="center col-sm-12">
-
+            <br>
+            <br>
             <h2>Add A Burger!</h2>
 
             <form class="create-update-form" action="/" method="POST">
@@ -67,4 +69,4 @@
     </div>
     <!-- end .row -->
 
-</div>Œ
+</div>
