--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="center col-sm-12">
             <img src="assets/img/burger.svg" alt="Eat-Da-Burger App">
-            {{!-- <h1>Eat-Da-Burger App</h1> --}}
+            {{!-- <h1>Eat-Da-Burger Apps</h1> --}}
             <p></p>
         </div>
     </div>
